# pizza_bake

./: .gitignore  README.md  manage.py  pyproject.toml
pizza_bake/: asgi.py  settings.py  urls.py  wsgi.py
pizza_menu/: apps.py  models.py  serializers.py  test_data.py  urls.py  views.py
pizza_menu/management/commands/: add_test_data.py
pizza_menu/migrations/: 0001_initial.py
